2008-01-15  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclCompExpr.c: Fix literal leak in exprs [Bug 1869989] 
	* generic/tclExecute.c:  (dgp)
	
	* doc/proc.n: changed wording for access to non-local variables;
	added mention to [namespace upvar]. Lame attempt at dealing with
	documentation [Bug 1872708]
	
2008-01-15  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:    Replacing 'operator' by 'op' in the def
	* generic/tclCompExpr.c: of struct TclOpCmdClientData to
	* generic/tclCompile.h:  accomodate C++ compilers [Bug 1855644]
	
2008-01-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tclWinSerial.c (SerialCloseProc, TclWinOpenSerialChannel):
	use critical section for read & write side. [Bug 1353846] (newman)

2008-01-11  Miguel Sofer  <msofer@users.sf.net>

	* unix/tclUnixThrd.c (TclpThreadGetStackSize): restore stack
	checking functionality in freebsd [Bug 1850424]

	* unix/tclUnixThrd.c (TclpThreadGetStackSize): fix for crash in
	freebsd [Bug 1860425].

2008-01-10  Don Porter	<dgp@users.sourceforge.net>

	* generic/tclStringObj.c (Tcl_AppendFormatToObj):  Correct failure to
	* tests/format.test:	account for big.used == 0 corner case in the
	%ll(idox) format directives.  [Bug 1867855].

2008-01-09  George Peter Staplin <georgeps@xmission.com>

	* doc/vwait.n: add a missing be to fix a typo.

2008-01-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* tools/tcltk-man2html.tcl (make-man-pages): make man page title
	use more specific info on lhs to improve tabbed browser view titles.

2008-01-02  Donal K. Fellows  <dkf@users.sf.net>

	* doc/binary.n: Fixed documentation bug reported on tcl-core, and
	reordered documentation to discourage people from using the hex
	formatter that is hardly ever useful.

2008-01-02  Don Porter	<dgp@users.sourceforge.net>

	* generic/tcl.h:	Bump version number to 8.5.1b1 to distinguish
	* library/init.tcl:	CVS development snapshots from the 8.5.0 and
	* unix/configure.in:	8.5.1 releases.
	* unix/tcl.spec:
	* win/configure.in: